--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@ GA FEWD
   	<meta name="WC Brazil 2014" content="Fifa world cup 2014">
   	<meta name="fifa, world cup, 2014, brazil, football" content="one, two, three">
 
-		<title>WC 2014</title>
+		<title>World Cup 2014</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/style.css">
